--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-normalize": "^8.0.4"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0"
