--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "styled-components": "^4.1.3",
-    "styled-normalize": "^8.0.4"
+    "styled-normalize": "^8.0.4",
+    "yup": "^0.26.7"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0"
