--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "CurtisM",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^5.8.0",
     "formik": "^1.4.2",
     "next": "^7.0.2",
     "react": "^16.7.0",
