--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "CurtisM",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "firebase": "^5.8.0",
     "formik": "^1.4.2",
