--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Squidlee eCommerce",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "next",
     "build": "next build",
     "start": "next start"
@@ -23,6 +23,12 @@
     "yup": "^0.26.7"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.0"
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.1.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "jest": "^24.1.0",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.1"
   }
 }
